fixing a mobile layout issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -171,7 +171,7 @@ body{
     width:100% !important;
   }
   .form-field-text{
-    width:97.5%;
+    width:90.5%;
     height:30px;
   }
   .searchFormSubmit{
